# api

./: .drone.yml  .env.sample  .gitignore  .prettierrc.toml  Cargo.toml  README.md
db/: sqlite.db
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_bakery_table.rs  m20220101_000002_create_chef_table.rs  m20220101_000003_create_users_table.rs
src/: alphabet.rs  database.rs  email.rs  main.rs  schema.rs
src/database/: mod.rs
src/email/: mod.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs  users.rs
src/get_token/: get_token.rs  mod.rs
src/routes/: get_jwt.rs  home.rs  mod.rs  user_register.rs
src/routes/user/: login.rs  mod.rs  register.rs
src/star_wars/: mod.rs  model.rs
src/tokens/: get_token.rs  mod.rs
