[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
dotenv = "0.15.0"
