[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-cors = "0.6.4"
# lettre = "0.10.1"
sea-orm = { version = "^0.9.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
futures = "0.3.21"
bcrypt = "0.13"
nanoid = "0.4.0"
names = "0.14.0"
async-graphql = { version = "5.0.7", features = ["chrono"] }
async-graphql-actix-web = "5.0.7"
